--- a/examples/adminCodes.html
+++ b/examples/adminCodes.html
@@ -23,6 +23,7 @@
             <li><a href="basic.html">Basic</a></li>
             <li><a href="bbox.html">Bounding Box</a></li>
             <li><a href="locale.html">Locale</a></li>
+            <li><a href="events.html">Events</a></li>
         </ul>
     </div>
     <div id="map" style="position: absolute; top: 3em; left:0; bottom:0; right: 0;border-top:2px solid #555;"></div>
