--- a/examples/bbox.html
+++ b/examples/bbox.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Leaflet Geonames Search Control</title>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-rc.3/leaflet.css"/>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0/leaflet.css"/>
     <link rel="stylesheet" href="../L.Control.Geonames.css"/>
     <style>
         #Nav li {
