--- a/examples/locale.html
+++ b/examples/locale.html
@@ -2,8 +2,9 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Leaflet Geonames Search Control</title>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0/leaflet.css"/>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.css"/>
     <link rel="stylesheet" href="../L.Control.Geonames.css"/>
     <style>
         #Nav li {
@@ -14,7 +15,7 @@
     </style>
 </head>
 <body>
-<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-rc.3/leaflet.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.js"></script>
 <script src="../L.Control.Geonames.js"></script>
     <div>
         <h2 style="float:left;margin:0;">Locale Example: <small>placenames are returned in 'es' locale</small></h2>
@@ -24,6 +25,7 @@
             <li><a href="adminCodes.html">Admin Codes</a></li>
             <li><a href="bbox.html">Bounding Box</a></li>
             <li><a href="events.html">Events</a></li>
+            <li><a href="mobileview.html">Mobile View</a></li>
         </ul>
     </div>
     <div id="map" style="position: absolute; top: 3em; left:0; bottom:0; right: 0;border-top:2px solid #555;"></div>
