--- a/examples/basic.html
+++ b/examples/basic.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,24 +9,40 @@
     <link rel="stylesheet" href="../L.Control.Geonames.css" />
     <style>
         #Nav li {
-            display:inline;
+            display: inline;
             margin-left: 10px;
 
         }
     </style>
 </head>
+
 <body>
     <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.1.0/leaflet.js"></script>
     <script src="../L.Control.Geonames.js"></script>
     <div>
         <h2 style="float:left;margin:0;">Basic Geonames Example</h2>
         <ul id="Nav" style="float:right;list-style-type:none; margin:0;padding:0;">
-            <li><b>Other examples:</b></li>
-            <li><a href="adminCodes.html">Admin Codes</a></li>
-            <li><a href="bbox.html">Bounding Box</a></li>
-            <li><a href="locale.html">Locale</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="mobileview.html">Mobile View</a></li>
+            <li>
+                <b>Other examples:</b>
+            </li>
+            <li>
+                <a href="adminCodes.html">Admin Codes</a>
+            </li>
+            <li>
+                <a href="bbox.html">Bounding Box</a>
+            </li>
+            <li>
+                <a href="locale.html">Locale</a>
+            </li>
+            <li>
+                <a href="events.html">Events</a>
+            </li>
+            <li>
+                <a href="mobileview.html">Mobile View</a>
+            </li>
+            <li>
+                <a href="postCodes.html">Postal Codes</a>
+            </li>
         </ul>
     </div>
     <div id="map" style="position: absolute; top: 3em; left:0; bottom:0; right: 0;border-top:2px solid #555;"></div>
@@ -39,8 +56,11 @@
             minZoom: 2
         }).addTo(map);
 
-        var control = L.control.geonames({username: 'cbi.test'});
+        var control = L.control.geonames({
+            username: 'cbi.test'
+        });
         map.addControl(control);
     </script>
 </body>
+
 </html>
