--- a/examples/events.html
+++ b/examples/events.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,24 +9,42 @@
     <link rel="stylesheet" href="../L.Control.Geonames.css" />
     <style>
         #Nav li {
-            display:inline;
+            display: inline;
             margin-left: 10px;
 
         }
     </style>
 </head>
+
 <body>
     <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.1.0/leaflet.js"></script>
     <script src="../L.Control.Geonames.js"></script>
     <div>
-        <h2 style="float:left;margin:0;">Event Handling Example: <small>See event data in your javascript console</small></h2>
+        <h2 style="float:left;margin:0;">Event Handling Example:
+            <small>See event data in your javascript console</small>
+        </h2>
         <ul id="Nav" style="float:right;list-style-type:none; margin:0;padding:0;">
-            <li><b>Other examples:</b></li>
-            <li><a href="basic.html">Basic</a></li>
-            <li><a href="adminCodes.html">Admin Codes</a></li>
-            <li><a href="bbox.html">Bounding Box</a></li>
-            <li><a href="locale.html">Locale</a></li>
-            <li><a href="mobileview.html">Mobile View</a></li>
+            <li>
+                <b>Other examples:</b>
+            </li>
+            <li>
+                <a href="basic.html">Basic</a>
+            </li>
+            <li>
+                <a href="adminCodes.html">Admin Codes</a>
+            </li>
+            <li>
+                <a href="bbox.html">Bounding Box</a>
+            </li>
+            <li>
+                <a href="locale.html">Locale</a>
+            </li>
+            <li>
+                <a href="mobileview.html">Mobile View</a>
+            </li>
+            <li>
+                <a href="postCodes.html">Postal Codes</a>
+            </li>
         </ul>
     </div>
     <div id="map" style="position: absolute; top: 3em; left:0; bottom:0; right: 0;border-top:2px solid #555;"></div>
@@ -39,17 +58,20 @@
             minZoom: 2
         }).addTo(map);
 
-        var control = L.control.geonames({username: 'cbi.test'});
+        var control = L.control.geonames({
+            username: 'cbi.test'
+        });
 
-        control.on('search', function(e){
+        control.on('search', function (e) {
             console.log('GeoNames search: ', e.params);
         });
 
-        control.on('select', function(e){
+        control.on('select', function (e) {
             console.log('GeoName selected: ', e.geoname);
         });
 
         map.addControl(control);
     </script>
 </body>
+
 </html>
